--- a/prayer.html
+++ b/prayer.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
-    <div id="header-container"></div>
+    <div id="header-placeholder"></div>
     
     <!-- Main Content -->
     <div class="p-4">
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Bottom Navbar -->
-    <div id="navbar-container"></div>
+    <div id="navbar-placeholder"></div>
 
     <!-- Scripts -->
     <script src="./script.js"></script>
