--- a/prayer.html
+++ b/prayer.html
@@ -29,6 +29,66 @@
                 <h2 class="text-xl font-bold mb-2">Prayer Times</h2>
                 <div id="prayer-times-container" class="space-y-4">
                     <!-- Prayer times will be dynamically inserted here -->
+                        <div class="p-4">
+        <!-- Prayer Times Container -->
+        <div id="prayer-times-container" class="space-y-4">
+            <!-- Fajr Prayer Time -->
+            <div class="flex items-center justify-between bg-white p-4 shadow rounded">
+                <!-- Sun Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4m0 0v4m0-4h4m-4 0H8m4 12v-4m0 4v-4m0 4h-4m4 0h4m-4-4v-4" />
+                </svg>
+                <!-- Prayer Name -->
+                <span class="text-lg font-semibold">Fajr</span>
+                <!-- Prayer Time -->
+                <span class="text-lg">05:00 AM</span>
+            </div>
+            <!-- Dhuhr Prayer Time -->
+            <div class="flex items-center justify-between bg-white p-4 shadow rounded">
+                <!-- Sun Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4m0 0v4m0-4h4m-4 0H8m4 12v-4m0 4v-4m0 4h-4m4 0h4m-4-4v-4" />
+                </svg>
+                <!-- Prayer Name -->
+                <span class="text-lg font-semibold">Dhuhr</span>
+                <!-- Prayer Time -->
+                <span class="text-lg">12:30 PM</span>
+            </div>
+            <!-- Asr Prayer Time -->
+            <div class="flex items-center justify-between bg-white p-4 shadow rounded">
+                <!-- Sun Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4m0 0v4m0-4h4m-4 0H8m4 12v-4m0 4v-4m0 4h-4m4 0h4m-4-4v-4" />
+                </svg>
+                <!-- Prayer Name -->
+                <span class="text-lg font-semibold">Asr</span>
+                <!-- Prayer Time -->
+                <span class="text-lg">03:30 PM</span>
+            </div>
+            <!-- Maghrib Prayer Time -->
+            <div class="flex items-center justify-between bg-white p-4 shadow rounded">
+                <!-- Sun Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4m0 0v4m0-4h4m-4 0H8m4 12v-4m0 4v-4m0 4h-4m4 0h4m-4-4v-4" />
+                </svg>
+                <!-- Prayer Name -->
+                <span class="text-lg font-semibold">Maghrib</span>
+                <!-- Prayer Time -->
+                <span class="text-lg">06:45 PM</span>
+            </div>
+            <!-- Isha Prayer Time -->
+            <div class="flex items-center justify-between bg-white p-4 shadow rounded">
+                <!-- Sun Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v4m0 0v4m0-4h4m-4 0H8m4 12v-4m0 4v-4m0 4h-4m4 0h4m-4-4v-4" />
+                </svg>
+                <!-- Prayer Name -->
+                <span class="text-lg font-semibold">Isha</span>
+                <!-- Prayer Time -->
+                <span class="text-lg">08:00 PM</span>
+            </div>
+        </div>
+                    </div>
                 </div>
             </div>
             <!-- Quran Reader Content -->
