--- a/prayer.html
+++ b/prayer.html
@@ -105,6 +105,6 @@
 
     <!-- Scripts -->
     <script src="./script.js"></script>
-    <script src="./prayer.js"></script>
+   <!-- <script src="./prayer.js"></script> -->
 </body>
         </html>
