--- a/prayer.html
+++ b/prayer.html
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Tab Content -->
-        <div id="tab-content" class="mt-4">
+        <div id="tab-content" class="mt-4 mb-4">
             <!-- Prayer Times Content -->
             <div id="prayer-times" class="tab-content hidden">
                 <h2 class="text-xl font-bold mb-2">Prayer Times</h2>
