--- a/prayer.html
+++ b/prayer.html
@@ -27,11 +27,11 @@
         </div>
 
         <!-- Tab Content -->
-        <div id="tab-content" class="mt-4 mb-4">
+        <div id="tab-content" class="mt-4">
             <!-- Prayer Times Content -->
             <div id="prayer-times" class="tab-content hidden">
                 <h2 class="text-xl font-bold mb-2">Prayer Times</h2>
-                <div id="prayer-times-container" class="space-y-4">
+                <div id="prayer-times-container" class="space-y-4 mb-4">
                     <!-- Prayer times will be dynamically inserted here -->
                     <div class="flex items-center justify-between bg-white p-4 shadow rounded">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
