--- a/more.html
+++ b/more.html
@@ -3,26 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaithFlow | Home</title>
+    <title>More Page</title>
+    <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-      <!-- Placeholder for Header -->
-      <div id="header-placeholder"></div>
+<body class="bg-gray-100">
+    <!-- Header -->
+    <div id="header-placeholder"></div>
 
-      <!-- Main Content -->
-      <div class="p-4">
-          <!-- Content goes here -->
-          <h1>More Page</h1>
-      </div>
-  
-      <!-- Placeholder for Navbar -->
-      <div id="navbar-placeholder"></div>
+    <!-- Main Content -->
+    <div class="p-4">
+        <h2 class="text-xl font-bold mb-4">More Options</h2>
+        <div class="space-y-4">
+            <!-- Settings -->
+            <a href="settings.html" class="flex items-center justify-between bg-white p-4 shadow rounded hover:bg-gray-50">
+                <div class="flex items-center">
+                    <!-- Settings Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 0110 10v4a10 10 0 01-9 9.95V22h-2v3H8v-3H6v-2.05A10 10 0 013 14v-4A10 10 0 0112 2zM12 7v10m-5 0v-5h10v5m-10-5h5v5" />
+                    </svg>
+                    <span class="ml-3 text-lg font-semibold">Settings</span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </a>
+            <!-- Account -->
+            <a href="account.html" class="flex items-center justify-between bg-white p-4 shadow rounded hover:bg-gray-50">
+                <div class="flex items-center">
+                    <!-- Account Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 12a5 5 0 100-10 5 5 0 000 10zm0 2a7 7 0 00-7 7v3h14v-3a7 7 0 00-7-7z" />
+                    </svg>
+                    <span class="ml-3 text-lg font-semibold">Account</span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </a>
+            <!-- Widgets -->
+            <a href="widgets.html" class="flex items-center justify-between bg-white p-4 shadow rounded hover:bg-gray-50">
+                <div class="flex items-center">
+                    <!-- Widgets Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-purple-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 4h4v4H6V4zm10 0h4v4h-4V4zM6 14h4v4H6v-4zm10 0h4v4h-4v-4zM5 11V7a2 2 0 012-2h4a2 2 0 012 2v4a2 2 0 01-2 2H7a2 2 0 01-2-2z" />
+                    </svg>
+                    <span class="ml-3 text-lg font-semibold">Widgets</span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </a>
+            <!-- Help & Support -->
+            <a href="support.html" class="flex items-center justify-between bg-white p-4 shadow rounded hover:bg-gray-50">
+                <div class="flex items-center">
+                    <!-- Support Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636a9 9 0 00-12.728 0M12 11h.01M10 14h4m-2-6v2a2 2 0 004 0m-4 0v2m0 4v2" />
+                    </svg>
+                    <span class="ml-3 text-lg font-semibold">Help & Support</span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </a>
+            <!-- Log Out -->
+            <a href="logout.html" class="flex items-center justify-between bg-white p-4 shadow rounded hover:bg-gray-50">
+                <div class="flex items-center">
+                    <!-- Logout Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1m0-10V6m6 10v2a2 2 0 01-2 2H8a2 2 0 01-2-2v-2m10 0v-2a2 2 0 00-2-2H6" />
+                    </svg>
+                    <span class="ml-3 text-lg font-semibold">Log Out</span>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+                </svg>
+            </a>
+        </div>
+    </div>
 
+    <!-- Footer (Bottom Navbar) -->
+    <div id="navbar-placeholder"></div>
 
-
-      <script src="./script.js"></script>
+    <!-- Scripts -->
+    <script src="./script.js"></script>
 </body>
-</html>
+                    </html>
