--- a/home.html
+++ b/home.html
@@ -3,26 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaithFlow | Home</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-      <!-- Placeholder for Header -->
-      <div id="header-placeholder"></div>
+<body class="bg-gray-100">
+    <!-- Header -->
+    <div id="header-placeholder"></div>
 
-      <!-- Main Content -->
-      <div class="p-4">
-          <!-- Content goes here -->
-          <h1>Home Page</h1>
-      </div>
-  
-      <!-- Placeholder for Navbar -->
-      <div id="navbar-placeholder"></div>
+    <!-- Main Content -->
+    <div class="p-4">
+        <div class="flex justify-between items-center">
+            <h2 class="text-xl font-bold">Welcome Back!</h2>
+            <!-- Weather Widget -->
+            <div class="flex items-center space-x-2 bg-blue-100 p-2 rounded">
+                <div class="text-blue-500">
+                    <!-- Weather Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 00-10 10h10V2zm0 0a10 10 0 0110 10h-9m0 0v10a10 10 0 01-10-10h10zm0 0a10 10 0 0110 10H12z" />
+                    </svg>
+                </div>
+                <div>
+                    <p class="text-sm text-blue-600">23°C</p>
+                    <p class="text-xs text-gray-500">Sunny</p>
+                </div>
+            </div>
+        </div>
 
+        <!-- Main Widgets Section -->
+        <div class="mt-6 space-y-4">
+            <!-- Widget 1 -->
+            <div class="bg-white p-4 rounded shadow">
+                <h3 class="text-lg font-semibold">Today's Summary</h3>
+                <p class="text-gray-600">You’ve completed 3 out of 5 tasks today.</p>
+            </div>
+            <!-- Widget 2 -->
+            <div class="bg-white p-4 rounded shadow">
+                <h3 class="text-lg font-semibold">Latest Journal Entry</h3>
+                <p class="text-gray-600">Reflect on today’s accomplishments and challenges.</p>
+            </div>
+            <!-- Widget 3 -->
+            <div class="bg-white p-4 rounded shadow">
+                <h3 class="text-lg font-semibold">Fitness Progress</h3>
+                <p class="text-gray-600">You’ve achieved 60% of your fitness goal for the week.</p>
+            </div>
+        </div>
+    </div>
 
+    <!-- Footer (Bottom Navbar) -->
+    <div id="navbar-placeholder"></div>
 
-      <script src="./script.js"></script>
+    <!-- Scripts -->
+    <script src="./script.js"></script>
 </body>
 </html>
