--- a/home.html
+++ b/home.html
@@ -30,6 +30,12 @@
             </div>
         </div>
 
+        <!-- Countdown Timer -->
+        <div class="mt-4 bg-green-100 p-4 rounded shadow text-center">
+            <h3 class="text-lg font-semibold text-green-700">Next Prayer: Dhuhr</h3>
+            <p class="text-2xl font-bold text-green-800" id="countdown">00:45:30</p>
+        </div>
+
         <!-- Main Widgets Section -->
         <div class="mt-6 space-y-4">
             <!-- Widget 1 -->
@@ -56,4 +62,4 @@
     <!-- Scripts -->
     <script src="./script.js"></script>
 </body>
-</html>
+    </html>
