--- a/index.html
+++ b/index.html
@@ -3,25 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaithFlow | Home</title>
+    <title>Welcome to FaithFlow</title>
+    <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-      <!-- Placeholder for Header -->
-      <div id="header-placeholder"></div>
+<body class="bg-gray-100">
+    <!-- Header -->
+    <div id="header-placeholder"></div>
 
-      <!-- Main Content -->
-      <div class="p-4">
-          <!-- Content goes here -->
-      </div>
-  
-      <!-- Placeholder for Navbar -->
-      <div id="navbar-placeholder"></div>
+    <!-- Welcome Section -->
+    <section class="p-6">
+        <div class="text-center">
+            <img src="../public/images/your-welcome-image.png" alt="Welcome" class="mx-auto rounded-lg shadow-lg w-full md:w-1/2">
+            <h1 class="text-2xl font-bold mt-4">Welcome to FaithFlow</h1>
+            <p class="text-gray-700 mt-2">Track your spiritual journey, fitness progress, and daily habits all in one place.</p>
+        </div>
 
+        <div class="mt-6 space-y-6">
+            <!-- Spiritual Journey Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-xl font-semibold text-blue-600">Spiritual Journey</h2>
+                <p class="text-gray-600 mt-2">Start your day with prayers, read the Quran, and keep track of your spiritual growth. Set your daily intentions and reflect on your progress.</p>
+            </div>
 
+            <!-- Fitness Journey Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-xl font-semibold text-green-600">Fitness Journey</h2>
+                <p class="text-gray-600 mt-2">Plan your workouts, track your fitness challenges, and achieve your goals. Celebrate your victories and learn from your challenges.</p>
+            </div>
 
-      <script src="./script.js"></script>
+            <!-- Daily Life Planner Section -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-xl font-semibold text-yellow-600">Daily Life Planner</h2>
+                <p class="text-gray-600 mt-2">Organize your day, manage your habits, and stay on top of your tasks. Balance your spiritual, physical, and personal goals.</p>
+            </div>
+        </div>
+
+        <!-- Get Started Button -->
+        <div class="mt-8 text-center">
+            <a href="home.html" class="bg-blue-600 text-white py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">Get Started</a>
+        </div>
+    </section>
+
+    <!-- Scripts -->
+    <script src="./script.js"></script>
 </body>
-</html>
+                    </html>
