--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Welcome Section -->
     <section class="p-6">
         <div class="text-center">
-            <img src="../public/images/your-welcome-image.png" alt="Welcome" class="mx-auto rounded-lg shadow-lg w-full md:w-1/2">
+            <img src="https://pin.it/341W21KrK" alt="Welcome" class="mx-auto rounded-lg shadow-lg w-full md:w-1/2">
             <h1 class="text-2xl font-bold mt-4">Welcome to FaithFlow</h1>
             <p class="text-gray-700 mt-2">Track your spiritual journey, fitness progress, and daily habits all in one place.</p>
         </div>
