--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Welcome Section -->
     <section class="p-6">
         <div class="text-center">
-            <img src="https://www.freepik.com/free-vector/businessman-woman-start-climbing-ladder-business-career-ambition-career-aspirations-plans-personal-growth-concept-white-background_11668416.htm#query=personal%20development&position=1&from_view=keyword&track=ais_hybrid&uuid=11e305d7-7cb6-4a95-8e74-b3c3a7d73563" alt="Welcome" class="mx-auto rounded-lg shadow-lg w-full md:w-1/2">
+            <img src="https://media.licdn.com/dms/image/D5612AQFB-WVehjpcAw/article-cover_image-shrink_720_1280/0/1706230228193?e=2147483647&v=beta&t=1umlQ1V8CPNWsZaWzQ_1OZioTHqC5kGG5BsCQYH4Pus" alt="Welcome" class="mx-auto rounded-lg shadow-lg w-full md:w-1/2">
             <h1 class="text-2xl font-bold mt-4">Welcome to FaithFlow</h1>
             <p class="text-gray-700 mt-2">Track your spiritual journey, fitness progress, and daily habits all in one place.</p>
         </div>
