--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
-    <!-- Header -->
-    <div id="header-placeholder"></div>
 
     <!-- Welcome Section -->
     <section class="p-6">
@@ -41,7 +39,7 @@
 
         <!-- Get Started Button -->
         <div class="mt-8 text-center">
-            <a href="home.html" class="bg-blue-600 text-white py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">Get Started</a>
+            <a href="./home.html" class="bg-blue-600 text-white py-3 px-6 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">Get Started</a>
         </div>
     </section>
 
